--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://tushar7314tr:9069656646@cluster0.iankq.mongodb.net
 RESEND_API_KEY=re_F2mkYDTJ_29FUeXeKXTKtsBiPUEL5Xkrr
+OPENAI_API_KEY=xxxxxxxxx
 # NEXT_PUBLIC_NEXTAUTH_SECRET=
